--- a/microservice-products/package.json
+++ b/microservice-products/package.json
@@ -18,13 +18,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-
     "db:dev:rm": "docker compose rm mongo -s -f -v",
     "db:dev:up": "docker compose up mongo -d",
     "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/mongoose": "^9.2.2",
