--- a/api/package.json
+++ b/api/package.json
@@ -68,6 +68,8 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "verbose": true,
+    "detectOpenHandles": true
   }
 }
